Add even more usage of OOP
Refactored into individual command classes, that inherits from an abstract Command class